@@ -13,7 +13,7 @@ my $builder = $class->new(
     module_name       => 'HTML::Tree',
     license           => 'perl',
     dist_author       => 'Jeff Fearn <Jeff.Fearn@gmail.com>',
-    dist_version_from => 'lib/HTML/Tree.pm',
+    dist_version_from => 'lib/HTML/Element.pm',
 	create_makefile_pl => 'traditional',
     build_requires    => {
         'Module::Build'       => 0,
