@@ -1,20 +1,21 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.03
+# Note: this file was auto-generated by Module::Build::Compat version 0.35
+require 5.8.0;
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
-          'NAME' => 'HTML::Tree',
-          'VERSION_FROM' => 'lib/HTML/Tree.pm',
-          'PREREQ_PM' => {
-                           'HTML::Parser' => '3.46',
-                           'HTML::Tagset' => '3.02',
-                           'Module::Build' => '0',
-                           'Test::Exception' => '0',
-                           'Test::More' => '0'
-                         },
+          'PL_FILES' => {},
           'INSTALLDIRS' => 'site',
+          'NAME' => 'HTML::Tree',
           'EXE_FILES' => [
                            'htmltree'
                          ],
-          'PL_FILES' => {}
+          'VERSION_FROM' => 'lib/HTML/Tree.pm',
+          'PREREQ_PM' => {
+                           'Test::More' => 0,
+                           'Test::Exception' => 0,
+                           'HTML::Tagset' => '3.02',
+                           'HTML::Parser' => '3.46',
+                           'Module::Build' => 0
+                         }
         )
 ;
