@@ -1,5 +1,8 @@
 Changelog for HTML-Tree
 4.2 UNRELEASED
+    [FIXES]
+    * Tied all $VERSION to HTML::Element to ensure latest package is used
+      for all modules. RT #66110
     [DOCUMENTATION]
     * Added text and link to "Perl and LWP" book.
     
